--- a/hint2mint/project/version2/components/headerFooter/page-footer.html
+++ b/hint2mint/project/version2/components/headerFooter/page-footer.html
@@ -53,9 +53,7 @@
     <div class="col-md-12">
       <div class="border-top pt-5">
         <p>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          Copyright &copy;2020 All rights reserved <a href="https://colorlib.com" target="_blank">!</a>
-          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+          Copyright &copy;2020 All rights reserved
         </p>
       </div>
     </div>
